--- a/resume/index.html
+++ b/resume/index.html
@@ -1,1 +1,10 @@
+<link rel="stylesheet" href="/assets/css/style.css">
+
+<nav class="nav">
+  <a class="nav__link" href="/">Home</a>
+  <a class="nav__link nav__link--active" href="/resume/">Resume</a>
+  <a class="nav__link" href="/projects/">Projects</a>
+  <a class="nav__link" href="/coursework/">Coursework</a>
+  <a class="nav__link" href="/contact/">Contact</a>
+</nav>
 
