Update projects page

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,8 +2,8 @@
 
 <nav class="nav">
   <a class="nav__link" href="/">Home</a>
-  <a class="nav__link" href="/projects/">Resume</a>
-   <a class="nav__link nav__link--active" href="/resume/">Projects</a>
+  <a class="nav__link" href="/resume/">Resume</a>
+   <a class="nav__link nav__link--active" href="/projects/">Projects</a>
   <a class="nav__link" href="/coursework/">Coursework</a>
   <a class="nav__link" href="/contact/">Contact</a>
 </nav>
