--- a/contact/index.html
+++ b/contact/index.html
@@ -1,9 +1,23 @@
-<link rel="stylesheet" href="/assets/css/style.css">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
 
-<nav class="nav">
-  <a class="nav__link" href="/">Home</a>
-  <a class="nav__link" href="/resume/">Resume</a>
-  <a class="nav__link" href="/projects/">Projects</a>
-  <a class="nav__link" href="/coursework/">Coursework</a>
-  <a class="nav__link nav__link--active" href="/contact/">Contact</a>
-</nav>
+<body>
+
+  <nav class="nav">
+    <a class="nav__link" href="/">Home</a>
+    <a class="nav__link" href="/resume/">Resume</a>
+    <a class="nav__link" href="/projects/">Projects</a>
+    <a class="nav__link" href="/coursework/">Coursework</a>
+    <a class="nav__link" href="/contact/">Contact</a>
+  </nav>
+
+  <!-- Contact page content -->
+
+  <script src="/assets/js/main.js"></script>
+</body>
+</html>
