--- a/contact/index.html
+++ b/contact/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/assets/css/style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Contact | Reggie Smith</title>
+
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
 
 <body>
-
   <nav class="nav">
     <a class="nav__link" href="/">Home</a>
     <a class="nav__link" href="/resume/">Resume</a>
@@ -16,8 +17,8 @@
     <a class="nav__link" href="/contact/">Contact</a>
   </nav>
 
-  <!-- Contact page content -->
+  <!-- page content here -->
 
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
