--- a/contact/index.html
+++ b/contact/index.html
@@ -4,21 +4,25 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Reggie Smith</title>
-
   <link rel="stylesheet" href="/assets/css/style.css" />
+  <script src="/assets/js/main.js" defer></script>
 </head>
 
 <body>
-  <nav class="nav">
-    <a class="nav__link" href="/">Home</a>
-    <a class="nav__link" href="/resume/">Resume</a>
-    <a class="nav__link" href="/projects/">Projects</a>
-    <a class="nav__link" href="/coursework/">Coursework</a>
-    <a class="nav__link" href="/contact/">Contact</a>
-  </nav>
+  <header class="site-header">
+    <div class="container">
+      <nav class="nav">
+        <a class="nav__link" href="/">Home</a>
+        <a class="nav__link" href="/resume/">Resume</a>
+        <a class="nav__link" href="/projects/">Projects</a>
+        <a class="nav__link" href="/coursework/">Coursework</a>
+        <a class="nav__link" href="/contact/">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-  <!-- page content here -->
-
-  <script src="/assets/js/main.js" defer></script>
+  <main class="container">
+    <!-- page content here -->
+  </main>
 </body>
 </html>
