--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <!-- Keep nav identical on every page  -->
       <nav class="nav">
-        <a class="nav__link nav__link--active" href="/">Home</a>
+        <a class="nav__link" href="/">Home</a>
         <a class="nav__link" href="/resume/">Resume</a>
         <a class="nav__link" href="/projects/">Projects</a>
         <a class="nav__link" href="/coursework/">Coursework</a>
@@ -105,6 +105,6 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
-  <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/main.js" defer></script>
 </body>
 </html>
