--- a/coursework/index.html
+++ b/coursework/index.html
@@ -1,9 +1,28 @@
-<link rel="stylesheet" href="/assets/css/style.css">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Coursework | Reggie Smith</title>
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <script src="/assets/js/main.js" defer></script>
+</head>
 
-<nav class="nav">
-  <a class="nav__link" href="/">Home</a>
-  <a class="nav__link" href="/resume/">Resume</a>
-  <a class="nav__link" href="/projects/">Projects</a>
-  <a class="nav__link nav__link--active" href="/coursework/">Coursework</a>
-  <a class="nav__link" href="/contact/">Contact</a>
-</nav>
+<body>
+  <header class="site-header">
+    <div class="container">
+      <nav class="nav">
+        <a class="nav__link" href="/">Home</a>
+        <a class="nav__link" href="/resume/">Resume</a>
+        <a class="nav__link" href="/projects/">Projects</a>
+        <a class="nav__link" href="/coursework/">Coursework</a>
+        <a class="nav__link" href="/contact/">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <main class="container">
+    <!-- page content here -->
+  </main>
+</body>
+</html>
